--- a/100daysR2_7-8-19/SVG.js/9._SVG_path_element.md
+++ b/100daysR2_7-8-19/SVG.js/9._SVG_path_element.md
@@ -3,39 +3,39 @@
 It is used to create lines, curves, arcs and more. Path SVG can be executed by using the path tag.The `<path>`element in SVG is the ultimate drawing element. It can draw anything! The path element takes a single attribute to describe what it draws: the `` attribute.
 M x,y | Move to the absolute coordinates x,y
 
-| Serial number      | attribute                             | meaning                                                                                                                                                                                                                                                                                   |
-| ------------------ | ------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **straight lines** |                                       |
-|                    |                                       |
-| 1                  | M (x,y)                               | Move to the absolute coordinates x,y                                                                                                                                                                                                                                                      |
-| 2                  | m (x,y)                               | Move to the right x and down y (or left and up if negative values) (The "Move To" command appears at the beginning of paths to specify where the drawing should start)                                                                                                                    |
-|                    |                                       |
-| 3                  | L (x,y)                               | Draw a straight line to the absolute coordinates x,y                                                                                                                                                                                                                                      |
-| 4                  | l (x,y )                              | Draw a straight line to a point that is relatively right x and down y (or left and up if negative values)                                                                                                                                                                                 |
-|                    |                                       |
-| 5                  | H (x)                                 | Draw a line horizontally to the exact coordinate x                                                                                                                                                                                                                                        |
-| 6                  | h (x)                                 | Draw a line horizontally relatively to the right x (or to the left if a negative value)                                                                                                                                                                                                   |
-|                    |                                       |
-| 7                  | V( y)                                 | Draw a line vertically to the exact coordinate y                                                                                                                                                                                                                                          |
-| 8                  | v( y)                                 | Draw a line vertically relatively down y (or up if a negative value)                                                                                                                                                                                                                      |
-|                    |                                       |
-| 9                  | Z (or z)                              | Draw a straight line back to the start of the path                                                                                                                                                                                                                                        |
-| **curve lines**    |                                       |
-|                    |                                       |
-| 10                 | C ( cX1,cY1 cX2,cY2 eX,eY)            | Draw a bezier curve based on two bezier control points and end at specified coordinates                                                                                                                                                                                                   |
-| 11                 | c                                     | Same with all relative values                                                                                                                                                                                                                                                             |
-|                    |                                       |
-| 12                 | S (cX2,cY2 eX,eY)                     | Basically a C command that assumes the first bezier control point is a reflection of the last bezier point used in the previous S or C command                                                                                                                                            |
-| 13                 | s                                     | Same with all relative values                                                                                                                                                                                                                                                             |
-|                    |                                       |
-| 14                 | Q (cX,cY eX,eY)                       | Draw a bezier curve based a single bezier control point and end at specified coordinates                                                                                                                                                                                                  |
-| 15                 | q                                     | Same with all relative values                                                                                                                                                                                                                                                             |
-|                    |                                       |
-| 16                 | T (eX,eY)                             | Basically a Q command that assumes the first bezier control point is a reflection of the last bezier point used in the previous Q or T command                                                                                                                                            |
-| 17                 | t                                     | Same with all relative values                                                                                                                                                                                                                                                             |
-|                    |                                       |
-| 18                 | A (rX,rY rotation, arc, sweep, eX,eY) | Draw an arc that is based on the curve an oval makes. First define the width and height of the oval. Then the rotation of the oval. Along with the end point, this makes two possible ovals. So the arc and sweep are either 0 or 1 and determine which oval and which path it will take. |
-| 19                 | a                                     | Same with relative values for eX,eY                                                                                                                                                                                                                                                       |
+| Serial_number      | attribute                                   | meaning                                                                                                                                                                                                                                                                                   |
+| ------------------ | ------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **straight lines** |                                             |
+|                    |                                             |
+| 1                  | M <br/> (x,y)                               | Move to the absolute coordinates x,y                                                                                                                                                                                                                                                      |
+| 2                  | m <br/> (x,y)                               | Move to the right x and down y (or left and up if negative values) (The "Move To" command appears at the beginning of paths to specify where the drawing should start)                                                                                                                    |
+|                    |                                             |
+| 3                  | L <br/>(x,y)                                | Draw a straight line to the absolute coordinates x,y                                                                                                                                                                                                                                      |
+| 4                  | l <br/> (x,y )                              | Draw a straight line to a point that is relatively right x and down y (or left and up if negative values)                                                                                                                                                                                 |
+|                    |                                             |
+| 5                  | H <br/> (x)                                 | Draw a line horizontally to the exact coordinate x                                                                                                                                                                                                                                        |
+| 6                  | h <br/>(x)                                  | Draw a line horizontally relatively to the right x (or to the left if a negative value)                                                                                                                                                                                                   |
+|                    |                                             |
+| 7                  | V <br/>( y)                                 | Draw a line vertically to the exact coordinate y                                                                                                                                                                                                                                          |
+| 8                  | v <br/>( y)                                 | Draw a line vertically relatively down y (or up if a negative value)                                                                                                                                                                                                                      |
+|                    |                                             |
+| 9                  | Z <br/> (or z)                              | Draw a straight line back to the start of the path                                                                                                                                                                                                                                        |
+| **curve lines**    |                                             |
+|                    |                                             |
+| 10                 | C <br/> ( cX1,cY1 cX2,cY2 eX,eY)            | Draw a bezier curve based on two bezier control points and end at specified coordinates                                                                                                                                                                                                   |
+| 11                 | c                                           | Same with all relative values                                                                                                                                                                                                                                                             |
+|                    |                                             |
+| 12                 | S <br/>(cX2,cY2 eX,eY)                      | Basically a C command that assumes the first bezier control point is a reflection of the last bezier point used in the previous S or C command                                                                                                                                            |
+| 13                 | s                                           | Same with all relative values                                                                                                                                                                                                                                                             |
+|                    |                                             |
+| 14                 | Q <br/> (cX,cY eX,eY)                       | Draw a bezier curve based a single bezier control point and end at specified coordinates                                                                                                                                                                                                  |
+| 15                 | q                                           | Same with all relative values                                                                                                                                                                                                                                                             |
+|                    |                                             |
+| 16                 | T <br/>(eX,eY)                              | Basically a Q command that assumes the first bezier control point is a reflection of the last bezier point used in the previous Q or T command                                                                                                                                            |
+| 17                 | t                                           | Same with all relative values                                                                                                                                                                                                                                                             |
+|                    |                                             |
+| 18                 | A <br/> (rX,rY rotation, arc, sweep, eX,eY) | Draw an arc that is based on the curve an oval makes. First define the width and height of the oval. Then the rotation of the oval. Along with the end point, this makes two possible ovals. So the arc and sweep are either 0 or 1 and determine which oval and which path it will take. |
+| 19                 | a                                           | Same with relative values for eX,eY                                                                                                                                                                                                                                                       |
 
 > **Uppercase letters mean the position will absolutely positioned while lowercase letters mean relative positioning.**
 
